--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="nav">
                     <li class="nav-item">
-                        <p class="nav-link text-success">Welcome - {{ user.username }}</p>
+                        <p class="nav-link text-success">Welcome - {{ user.first_name }}</p>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="accounts/logout">Logout</a>
@@ -63,17 +63,17 @@
 
                 </ul>
             </div>
-{#        {% else %}#}
-{#            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">#}
-{#                <ul class="nav">#}
-{#                    <li class="nav-item ">#}
-{#                        <a class="nav-link" href="accounts/login">Login</a>#}
-{#                    </li>#}
-{#                    <li class="nav-item ">#}
-{#                        <a class="nav-link" href="accounts/signup">Register</a>#}
-{#                    </li>#}
-{#                </ul>#}
-{#            </div>#}
+        {% else %}
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="nav">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="accounts/login">Login</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="accounts/signup">Register</a>
+                    </li>
+                </ul>
+            </div>
         {% endif %}
     </nav>
 </div>
