--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="/maps/map/">Map</a>
+                </li>
                  <li class="nav-item">
                     <a class="nav-link" href="/blog/">Blog Posts</a>
                 </li>
