--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -4,13 +4,22 @@
 
 {% block content %}
 
-<div class="relative h-screen w-full">
-    <img src="{% static 'img/worldmap.jpg' %}" alt="World Map" class="absolute w-full h-full object-cover">
+{#    <img src="{% static 'img/worldmap.jpg' %}" alt="World Map" class="absolute w-full h-full object-cover">#}
     
-    <div class="absolute w-full">
-        <h1 class='mt-4 text-center text-5xl font-bold leading-tight text-gray-800 font-serif'>Welcome to OnlyWorlds</h1>
-        <p class='text-3xl text-gray-600 text-center italic'>Worlds Within Worlds Within</p>
+    <div class="flex items-center justify-center h-screen w-full">
+    <div>
+        <h1 class='text-center text-5xl font-bold leading-tight text-white font-serif'>Welcome to OnlyWorlds</h1>
+        <h2 class='text-3xl text-gray-500 text-center italic'>A World Standard</h2>
+        <p class='text-2xl text-gray-300 text-justify text-center px-4 md:px-6 lg:px-24 py-16'>OnlyWorlds is a proposal
+            for
+            how we structure our
+            worlds: an open source data framework that defines
+            worlds as interchangeable files, usable in any tool that is made compatible with the format.
+OnlyWorlds is currently in closed alpha. See the About page for more information and to request access to the initial toolset.
+</p>
+
     </div>
 </div>
+
 
 {% endblock %}
