--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,7 +10,7 @@
      {% load static %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
 </head>
-<body class="bg-blue-100">
+<body class="bg-black">
 
 
 <!-- Navbar -->
