--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -6,13 +6,19 @@
             
             <!-- Left side - Logo and Navigation Links -->
             <div class="flex items-center">
-                <div class="flex-shrink-0">
-                    <img src="{% static 'img/logo2.png' %}" alt="Logo" class="block lg:hidden h-12 w-auto">
-                    <img src="{% static 'img/logo2.png' %}" alt="Logo" class="hidden lg:block h-12 w-auto">
+                <div class="flex-shrink-0"><a href="/">
+                    <img src="{% static 'img/OW logo_v01_Blue.png' %}" alt="Logo" class="block lg:hidden h-12 w-auto">
+                    <img src="{% static 'img/OW logo_v01_Blue.png' %}" alt="Logo" class="hidden lg:block h-12 w-auto"></a>
                 </div>
+{#                <div class="hidden sm:block sm:ml-6">#}
+{#                    <div class="flex space-x-4">#}
+{#                        <a href="/" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Home</a>#}
+{#                        <!-- Other navigation links -->#}
+{#                    </div>#}
+{#                </div>#}
                 <div class="hidden sm:block sm:ml-6">
                     <div class="flex space-x-4">
-                        <a href="/" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Home</a>
+                       <a href="/about/" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">About</a>
                         <!-- Other navigation links -->
                     </div>
                 </div>
@@ -31,7 +37,7 @@
                     <a href="{% url 'account_logout' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Logout</a>
                 {% else %}
                     <a href="{% url 'account_login' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Login</a>
-                    <a href="{% url 'account_signup' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Register</a>
+{#                    <a href="{% url 'account_signup' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Register</a>#}
                 {% endif %}
             </div>
         </div>
