--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,14 +3,28 @@
 {% load static %}
 
 {% block content %}
-<div class="container mx-auto p-4">
-    <form method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full sm:w-3/4 md:w-1/2 lg:w-1/3 mx-auto">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" value="Login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-        <a href="{% url 'account_reset_password' %}" class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
-            Forgot Password?
-        </a>
-    </form>
-</div>
+    <div class="container mx-auto p-4">
+        <form method="post"
+              class="bg-gray-700 shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full sm:w-3/4 md:w-1/2 lg:w-1/3 mx-auto">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input type="submit" value="Login"
+                   class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            <div>
+                <p class = "mt-4 text-white">Cant recall your password? </p>
+                <a href="{% url 'account_reset_password' %}"
+                   class="mb-4 inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
+                    Forgot Password?
+                </a>
+            </div>
+            <!-- Signup Button -->
+            <div>
+                <p class ="text-white">Not a member yet?</p>
+                <a href="{% url 'account_signup' %}"
+                   class="mt-6 py-2 inline-block bg-black hover:bg-gray-700 text-white font-bold  px-4 rounded ">
+                    Sign Up
+                </a>
+            </div>
+        </form>
+    </div>
 {% endblock %}
