--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.tailwindcss.com"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Django Project</title>
+   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
     <!-- Include Tailwind CSS -->
-   <script src="https://cdn.tailwindcss.com"></script>
-{#    CSS Styles #}
-     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
+    {#    CSS Styles #}
+
+    {#    <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">#}
 </head>
 <body class="bg-black">
 
