Accepts worlddata files
Signed-off-by: Morgan McKnight <69460926+morgan360@users.noreply.github.com>

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -39,6 +39,8 @@
                                    role="menuitem">Create Location</a>
                                 <a href="{% url 'view_profile' %}" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem">View Profile</a>
                                 <a href="{% url 'update_profile' %}" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem">Update Profile</a>
+                                <a href="{% url 'world_key_input' %}" class="text-gray-700 block px-4 py-2 text-sm"
+                                   role="menuitem">View World Data Files</a>
                             </div>
                         </div>
                     </div>
