--- a/worlds/templates/world_key_input.html
+++ b/worlds/templates/world_key_input.html
@@ -14,6 +14,7 @@
 <div class="max-w-lg mx-auto py-10">
     <h1 class="text-2xl font-bold text-center mb-6">Enter World Key</h1>
     <form action="{% url 'world_key_input_process' %}" method="get" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        {% csrf_token %}
         <div class="mb-4">
             <label for="worldKey" class="block text-gray-700 text-sm font-bold mb-2">World Key:</label>
             <input type="text" id="worldKey" name="worldKey" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
