Accepts worlddata files
Signed-off-by: Morgan McKnight <69460926+morgan360@users.noreply.github.com>

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -33,10 +33,10 @@
                                 {% if user.is_superuser %}
                                     <a href="/admin/" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem">Admin</a>
                                 {% endif %}
-                                <a href="{% url 'list_locations' %}" class="text-gray-700 block px-4 py-2 text-sm"
-                                   role="menuitem">List Locations</a>
-                                <a href="{% url 'create_location' %}" class="text-gray-700 block px-4 py-2 text-sm"
-                                   role="menuitem">Create Location</a>
+{#                                <a href="{% url 'list_locations' %}" class="text-gray-700 block px-4 py-2 text-sm"#}
+{#                                   role="menuitem">List Locations</a>#}
+{#                                <a href="{% url 'create_location' %}" class="text-gray-700 block px-4 py-2 text-sm"#}
+{#                                   role="menuitem">Create Location</a>#}
                                 <a href="{% url 'view_profile' %}" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem">View Profile</a>
                                 <a href="{% url 'update_profile' %}" class="text-gray-700 block px-4 py-2 text-sm" role="menuitem">Update Profile</a>
                                 <a href="{% url 'world_key_input' %}" class="text-gray-700 block px-4 py-2 text-sm"
