--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="flex flex-col items-center justify-start min-h-screen w-full pt-16">
     <div class="text-center">
-        <h2 class="text-2xl font-bold text-white mb-4">About Us</h2>
+        <h2 class="text-2xl font-bold text-white mb-4">OnlyWorlds</h2>
         <p class="text-lg text-gray-300 text-justify px-4 md:px-6 lg:px-24 py-1">
             OnlyWorlds is an open source data framework for world building in creative applications<br>
             Currently in closed alpha<br>
