--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -8,6 +8,7 @@
     <div class="text-center">
         <h2 class="text-2xl font-bold text-white mb-4">OnlyWorlds</h2>
         <p class="text-lg text-gray-300 text-justify px-4 md:px-6 lg:px-24 py-1">
+            OnlyWorlds is a game developer’s approach to world building.
             OnlyWorlds is an open source data framework for world building in creative applications<br>
             Currently in closed alpha<br>
             Leave your email and a message for questions or interest
