--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,30 +1,46 @@
 {% extends "_base.html" %}
+{% load widget_tweaks %}
 {% load crispy_forms_tags %}
 {% load static %}
 
 {% block content %}
-    <div class="container mx-auto p-4">
-        <form method="post"
-              class="bg-gray-700 shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full sm:w-3/4 md:w-1/2 lg:w-1/3 mx-auto">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <input type="submit" value="Login"
-                   class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-            <div>
-                <p class = "mt-4 text-white">Cant recall your password? </p>
-                <a href="{% url 'account_reset_password' %}"
-                   class="mb-4 inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
-                    Forgot Password?
-                </a>
-            </div>
-            <!-- Signup Button -->
-            <div>
-                <p class ="text-white">Not a member yet?</p>
-                <a href="{% url 'account_signup' %}"
-                   class="mt-6 py-2 inline-block bg-black hover:bg-gray-700 text-white font-bold  px-4 rounded ">
-                    Sign Up
-                </a>
-            </div>
-        </form>
-    </div>
+<div class="container mx-auto p-4">
+    <form method="post" class="bg-black shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full sm:w-3/4 md:w-1/2 lg:w-1/3 mx-auto">
+        {% csrf_token %}
+        {% for field in form %}
+            {% if field.is_hidden %}
+                {{ field }}
+            {% else %}
+                <div class="{% if field.name != 'remember' %}mb-4{% endif %}">
+                    {% if field.name != 'remember' %}
+                        <label class="block text-white text-sm font-bold mb-2" for="{{ field.id_for_label }}">
+                            {{ field.label }}
+                            {% if field.field.required %}*{% endif %}
+                        </label>
+                        {{ field|add_class:"bg-gray-600 text-white rounded border border-gray-600 p-3 leading-tight w-full" }}
+                    {% else %}
+                        <!-- Special layout for Remember Me field -->
+                     <div class="flex items-center mb-4">
+            {{ field|add_class:"form-checkbox" }}
+            <label for="{{ field.id_for_label }}" class="ml-2 text-white text-sm">{{ field.label }}</label>
+        </div>
+                    {% endif %}
+                    {% if field.help_text %}
+                        <p class="text-gray-400 text-xs italic">{{ field.help_text }}</p>
+                    {% endif %}
+                    {% for error in field.errors %}
+                        <p class="text-red-500 text-xs italic">{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endfor %}
+        <div class="mb-6">
+            <input type="submit" value="Login" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer">
+        </div>
+        <div class="flex flex-col items-center space-y-4 mt-6">
+            <a href="{% url 'account_signup' %}" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded text-center">Create Account Using Keycode</a>
+            <a href="{% url 'account_reset_password' %}" class="text-white hover:text-blue-300 font-bold text-sm">Forgot Password?</a>
+        </div>
+    </form>
+</div>
 {% endblock %}
