--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -8,12 +8,12 @@
     <div class="text-center mt-8 lg:mt-16">
         <h1 class="text-5xl font-bold text-blue-400 mb-2">OnlyWorlds</h1>
         <p class="text-lg px-4 md:px-6 lg:px-24 py-2">
-            Is a proposal and framework for a common data format in world building<br>
-            To allow distribution of worlds across tools, games, apps, web and teams<br><br><br><br>
+            Is a proposal for a common data format in world building<br>
+            A framework for the distribution of worlds across tools, games, apps, web and teams<br><br><br><br>
 
-            In closed alpha from Q1 2024<br>
+           In closed alpha per Q1 2024<br>
            Collecting feedback on the data framework through mobile and desktop applications<br><br>
-           Leave your info below to request access
+           Leave your email and a message for more information
         </p>
     </div>
     <!-- Embed the form directly into the page content -->
