--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,33 +7,7 @@
 <div class="container mx-auto p-4">
     <form method="post" class="bg-black shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full sm:w-3/4 md:w-1/2 lg:w-1/3 mx-auto">
         {% csrf_token %}
-        {% for field in form %}
-            {% if field.is_hidden %}
-                {{ field }}
-            {% else %}
-                <div class="{% if field.name != 'remember' %}mb-4{% endif %}">
-                    {% if field.name != 'remember' %}
-                        <label class="block text-white text-sm font-bold mb-2" for="{{ field.id_for_label }}">
-                            {{ field.label }}
-                            {% if field.field.required %}*{% endif %}
-                        </label>
-                        {{ field|add_class:"bg-gray-600 text-white rounded border border-gray-600 p-3 leading-tight w-full" }}
-                    {% else %}
-                        <!-- Special layout for Remember Me field -->
-                     <div class="flex items-center mb-4">
-            {{ field|add_class:"form-checkbox" }}
-            <label for="{{ field.id_for_label }}" class="ml-2 text-white text-sm">{{ field.label }}</label>
-        </div>
-                    {% endif %}
-                    {% if field.help_text %}
-                        <p class="text-gray-400 text-xs italic">{{ field.help_text }}</p>
-                    {% endif %}
-                    {% for error in field.errors %}
-                        <p class="text-red-500 text-xs italic">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        {% endfor %}
+    {{ form|crispy }}
         <div class="mb-6">
             <input type="submit" value="Login" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded cursor-pointer">
         </div>
