some user content:

--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+<!-- content_framework.html -->
+{#<div class="text-center">#}
+<div>
+    <p class="mb-4">OnlyWorlds is a platform that maintains, and operates on, an open source data format</p>
+    <p class="mb-4">This data format aims to represent fictional or historical worlds </p>
+    <p class="mb-4">Each such world is a snapshot at a specific point in time, and given body through its world Elements</p>
+    <p class="mb-4">These Elements, of 18 categories, have attributes that can be customized, linked, and operated on as digital objects</p>
+    <p class="mb-4">So that a world might be constructed in a writing app, sent to a map making tool, then used in games or simulation software </p>
 
-</body>
-</html>
+
+</div>
