--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+<!-- content_landing.html -->
+{#<div class="text-center">#}
+<div>
+    <h2 class="text-2xl font-bold mb-4">Welcome to the OnlyWorlds pre-alpha release</h2>
+    <p class="mb-4">This launch aims to test technical essentials and to gather first feedback on the Flutter Companion App, ahead of a wider release in April</p>
+    <p class="mb-4">Some of this website is still under construction</p>
+    <p class="mb-4">Navigate to Applications tab to access this mobile app for android and iOs</p>
+    <p class="mb-12">Click the button below to leave essential feedback <3 <br></p>
 
-</body>
-</html>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY-47uxOUANZuhomPVOgpUB0AwSlub6MsPOWby1zcOukHhhg/viewform?usp=sf_link" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        Feedback Form
+    </a>
+</div>
