--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -8,7 +8,7 @@
     <div class="text-center mt-8 lg:mt-16">
         <h1 class="text-5xl font-bold text-blue-400 mb-2">OnlyWorlds</h1>
         <p class="text-lg px-4 md:px-6 lg:px-24 py-2">
-            is an open source data format for world building<br>
+            is a framework for an open source world building data format<br>
             To allow distribution of worlds across tools, games, apps, web and teams<br><br><br><br>
 
            In closed alpha now<br>
