--- a/home/templates/content_worlds.html
+++ b/home/templates/content_worlds.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+<!-- content_worlds.html -->
+{#<div class="text-center">#}
+<div>
+    <p class="mb-4">VIEW, CLICK, REMOVE, ADD world files</p>
 
-</body>
-</html>
+</div>
