--- a/home/templates/logged_in_home.html
+++ b/home/templates/logged_in_home.html
@@ -5,10 +5,10 @@
 
 {% block content %}
     <div class="container mx-auto p-4">
-        <div class="min-h-screen md:max-w-4xl rounded overflow-hidden shadow-lg my-4 mx-auto">
+        <div class="min-h-[500px] md:max-w-4xl rounded overflow-hidden shadow-lg my-4 mx-auto bg-slate-800">
 
             <!-- Tab headers -->
-            <div class="border-b-2">
+            <div class="border-b-2 border-blue-500">
                 <nav class="flex flex-row justify-between">
                     <button class="tab text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none" data-target="landing">
                         Landing
@@ -32,27 +32,27 @@
             </div>
 
             <!-- Tab Content -->
-            <div class="tab-content p-4 bg-gray-200" id="landing" style="display: none;">
+            <div class="tab-content text-white p-4" id="landing" style="display: none;">
                 <!-- Include your landing content here -->
               {% include 'content_landing.html' %}
             </div>
-            <div class="tab-content p-4 bg-gray-200" id="framework" style="display: none;">
+        <div class="tab-content text-white p-4" id="framework" style="display: none;">
                 <!-- Include your framework content here -->
                 {% include 'content_framework.html' %}
             </div>
-            <div class="tab-content p-4 bg-gray-200" id="apps" style="display: none;">
+        <div class="tab-content text-white p-4" id="apps" style="display: none;">
                 <!-- Include your apps content here -->
                  {% include 'content_apps.html' %}
             </div>
-            <div class="tab-content p-4 bg-gray-200" id="faqs" style="display: none;">
+       <div class="tab-content text-white p-4" id="faqs" style="display: none;">
                 <!-- Include your FAQs content here -->
                  {% include 'content_FAQs.html' %}
             </div>
-            <div class="tab-content p-4 bg-gray-200" id="profile" style="display: none;">
+    <div class="tab-content text-white p-4" id="profile" style="display: none;">
                 <!-- Include your profile content here -->
                 {% include 'content_profile.html' %}
             </div>
-            <div class="tab-content p-4 bg-gray-200" id="worlds" style="display: none;">
+           <div class="tab-content text-white p-4" id="worlds" style="display: none;">
                 <!-- Include your worlds content here -->
                  {% include 'content_worlds.html' %}
             </div>
