import prev work

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -6,13 +6,13 @@
 {% block content %}
 <div class="flex flex-col items-center justify-start min-h-screen w-full bg-black text-gray-200">
     <div class="text-center mt-8 lg:mt-16">
-        <h1 class="text-5xl font-bold text-blue-400 mb-2">OnlyWorlds</h1>
+        <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>
         <p class="text-lg px-4 md:px-6 lg:px-24 py-2">
-            A framework for world building with an open source data format<br>
-            Allows world creation, display and simulation across tools, games, apps, and web<br><br><br><br>
+            is a framework for an open source world building data format<br>
+            To allow distribution of worlds across tools, games, apps, web and teams<br><br><br><br>
 
-           In closed alpha<br>
-           Please leave a message if you are interested in participating
+           In closed alpha now<br>
+           Leave a message for questions or interest
         </p>
     </div>
     <!-- Embed the form directly into the page content -->
@@ -21,15 +21,15 @@
             {% csrf_token %}
             {% for field in form %}
                 <div>
-                    <label for="{{ field.id_for_label }}" class="block text-sm font-medium">{{ field.label }}</label>
+                    <label for="{{ field.id_for_label }}" class="block text-[#f57ed7] text-lg font-large">{{ field.label }}</label>
                     {% if field.name == 'message' %}
                         <textarea name="{{ field.name }}" id="{{ field.id_for_label }}"
-                                  class="mt-1 block w-full px-3 py-4 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
+                                  class="mt-1 block h-20 w-full py-2 px-2 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
                                   >{{ field.value|default_if_none:'' }}</textarea>
                     {% else %}
                         <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}"
                                id="{{ field.id_for_label }}"
-                               class="mt-1 block w-full px-3 py-2 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
+                               class="mt-1 block w-full h-10 py-0 px-2 rounded-md bg-gray-700 border-transparent focus:border-gray-500 focus:bg-gray-600 focus:ring-gray-500 text-white shadow-sm sm:text-sm"
                                value="{{ field.value|default_if_none:'' }}">
                     {% endif %}
                     {% if field.help_text %}
@@ -38,7 +38,7 @@
                 </div>
             {% endfor %}
             <button type="submit"
-                    class="w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-800 hover:bg-blue-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
+                    class="w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-lg font-medium rounded-md text-white bg-[#37C1F0] hover:bg-[#0a8cbf] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
                 Send
             </button>
         </form>
