--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,10 +4,9 @@
 
 {% block content %}
     <div class="container mx-auto p-4">
-        <form method="post"
-              class="bg-black shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full sm:w-3/4 md:w-1/2 lg:w-1/3 mx-auto">
+        <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
-            {{ form|crispy }}
+             {% crispy form %}
             <input type="submit" value="Login"
                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             <div>
@@ -20,7 +19,7 @@
             <div>
                 <a href="{% url 'account_signup' %}"
                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                    Sign Up
+                    Create Account
                 </a>
             </div>
         </form>
