--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,15 +3,13 @@
 {% load static %}
 
 {% block content %}
-    <div class="container mx-auto p-4">
+    <div class="container mx-auto p-4 custom-font">
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
              {% crispy form %}
-            <input type="submit" value="Login"
-                   class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
             <div>
                 <a href="{% url 'account_reset_password' %}"
-                   class="mb-4 inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
+                   class="mb-4 inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800  ">
                     Forgot Password?
                 </a>
             </div>
