--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -8,11 +8,11 @@
     <div class="text-center mt-8 lg:mt-16">
         <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>
         <p class="text-lg px-4 md:px-6 lg:px-24 py-2">
-            is a framework for an open source world building data format<br>
-            To allow distribution of worlds across tools, games, apps, web and teams<br><br><br><br>
+            A framework for world building with an open source data format<br>
+            Allows world creation, display and simulation across tools, games, apps, and web<br><br><br><br>
 
-           In closed alpha now<br>
-           Leave a message for questions or interest
+           In closed alpha<br>
+           Please leave a message if you are interested in participating
         </p>
     </div>
     <!-- Embed the form directly into the page content -->
