--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,19 +4,19 @@
 
 {% block content %}
     <div class="container mx-auto p-4 custom-font">
-        <form method="post" action="{% url 'login' %}">
+        <form method="post" action="{% url 'login' %}" class="text-center">
             {% csrf_token %}
              {% crispy form %}
-            <div>
+            <div class="text-center my-4">
                 <a href="{% url 'account_reset_password' %}"
-                   class="mb-4 inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800  ">
-                    Forgot Password?
+                   class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
+                    Forgot Password
                 </a>
             </div>
             <!-- Signup Button -->
-            <div>
+            <div class="text-center my-4">
                 <a href="{% url 'account_signup' %}"
-                   class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                   class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
                     Create Account
                 </a>
             </div>
